# transcription-pipeline-manager

./: README.md  pyproject.toml
runpod-singleton/: transcription-pipeline.config.yaml
tests/: test_config.py  test_logger.py  test_manager.py  test_rest_interface.py  test_utils.py
transcription_pipeline_manager/: __init__.py  config.py  constants.py  manager.py  rest_interface.py  utils.py
