[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription-pipeline-manager"
version = "0.1.0"
description = "Manages periodically running the transcription pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name="Chad Phillips", email="chad@apartmentlines.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "pyyaml",
    "pyaml-env",
    # "runpod-singleton @ git+https://github.com/apartmentlines/runpod-singleton.git@v0.1.1",
    "runpod-singleton @ git+https://github.com/apartmentlines/runpod-singleton.git@5b5e82fd16fb8eea33b1aa85583c6ef5363b5a2d",
]

[project.scripts]
transcription-pipeline-manager = "transcription_pipeline_manager.manager:main"
rest-interface = "transcription_pipeline_manager.rest_interface:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pyright",
]
